[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["agliullin13artem <150588030+agliullin13artem@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = {extras = ["email"], version = "^2.9.2"}
sqlalchemy = {extras = ["acyncio"], version = "^2.0.36"}
aiosqlite = "^0.18.0"
pydantic-settings = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
